# Backtester

./: .gitignore  CMakeLists.txt  CMakePresets.json  debug_build.bat  rel_deb_info_build.bat  release_build.bat  vcpkg.json
include/: pch.hpp
include/Modules/: pch.hpp
include/Modules/Core/: AppInitializer.hpp  AppRunner.hpp
include/Modules/Data/: DataCleaner.hpp  DataFetcher.hpp  DataPipelineManager.hpp  DatabaseHandler.hpp  IDataStage.hpp
include/Modules/PyIntegration/: PythonBridge.hpp
include/Modules/Utils/: SystemUtils.hpp
scripts/: ohlcv_eda.py  runner.py
scripts/eda/: bootstrapper.py  data_loader.py  metrics.py  ohlcv_visualizer.py  summary.py
scripts/metrics/: performance.py
scripts/strategies/: trend_following.py
scripts/utils/: design_patterns.py
sql/: integrity_checks.sql
src/: main.cpp
src/Modules/Core/: AppInitializer.cpp  AppRunner.cpp
src/Modules/Data/: DataCleaner.cpp  DataPipelineManager.cpp  DatabaseHandler.cpp
src/Modules/PyIntegration/: PythonBridge.cpp
src/Modules/Utils/: SystemUtils.cpp
src/Modules/data/: DataFetcher.cpp
